Changelog
=========

2019.4.0rc5 (unreleased)
------------------------

- Update Products.LDAPUserFolder from 2.28.post2 to 2.28.post3. [elioschmutz]
- Extend dossier serializer with `is_subdossier`. [elioschmutz]
- Add @globalindex API endpoint. [phgross]
- Add proposals to @listing endpoint. [njohner]
- Remove catalog support for @listing endpoint. [elioschmutz]
- Moved reminder options vocabulary to globaly registered vocabulary. [phgross]
- Add a user action to switch to the new gever-ui. [elioschmutz]
- Add support for contacts to the @listing endpoint. [phgross]


2019.4.0rc4 (2019-10-22)
------------------------

- Preserve query string in the resolve notification view. [phgross]
- Add UID to listing endpoints supported fields. [phgross]
- Allow adding favorites by UID parameter via favorites endpoint. [phgross]
- Add UID to listing endpoints supported fields. [phgross]
- Allow adding favorites with UID parameter via favorites endpoint. [phgross]
- Bump ftw.keywordwidget version to fix missing titles on terms. [njohner]
- Allow text field in task deadline modification through API. [njohner]
- Make `issuer` filterable in the @lising endpoint. [elioschmutz]
- Implement absolute reminder dates in the reminder-selector. [elioschmutz]
- Fix mail deserialization for mails uploaded through tus-upload. [njohner]
- Downpin ftw.recipe.solr to 1.2.1 to have log4j configuration valid for solr < 7.4.X [deiferni]
- Use plone.restapi summary serialization in the recently-touched endpoint. [phgross]
- document_report: Add support for pseudo-relative paths. [lgraf]
- pdf-dossier-listing: Add support for pseudo-relative paths. [lgraf]
- dossier_report: Add support for pseudo-relative paths. [lgraf]
- zip_selected view: Add support for pseudo-relative paths. [lgraf]
- Fix a problem in the watcher handling when reassigning a task to the same user but a different org unit. [phgross]
- Support the bundle-import of mails in the msg format. [phgross]